@@ -19,17 +19,11 @@
 
 (defun bones (&key (function #'(lambda ()(random 12)))
 		   (hook #'(lambda (n) n))
-		   (monitor #'(lambda (value)
-				(declare (ignore value))
-				nil))
-		   (action #'(lambda ()))
 		   (length 128)
 		   &allow-other-keys)
   (reset (make-instance 'bones
 			:length length
 			:hook hook
-			:monitor monitor
-			:action action
 			:function function
 			:seed (funcall function))))
 
@@ -39,16 +33,11 @@
 (defmethod clone ((mother bones) &key &allow-other-keys)
   (bones :function (slot-value mother 'random-function)
 	 :hook (value-hook mother)
-	 :monitor (monitor mother)
-	 :action (action mother)
 	 :length (pattern-length mother)))
 
 (defmethod next-1 ((bones bones))
   (prog1
-      (progn
-	(if (funcall (monitor bones)(internal-value bones))
-	    (funcall (action bones)))
-      (value bones))
+      (value bones)
     (setf (internal-value bones)
 	  (funcall (slot-value bones 'random-function)))))
 
@@ -58,15 +47,10 @@
 (setf (documentation 'bones 'function)
       "Bones is a random-number generator.
 
-(bones &key function hook monitor action)
+(bones &key function hook)
 
 :function - The random number function.  Defaults to (lambda () (random 1.0))
             THE PDF plugin provides several suitable random-number functions.
             
-:hook     - The value-hook function. Defaults to (lambda (n) n)
-:monitor  - Predicate, called within next-1 to trigger the action 
-            function.  Default (lambda (value)) -> nil
-:action   - Function executed whenever the monitor returns non-nil within 
-            a next-1 call.   Action is used solely for its side effects.
+:hook     - The value-hook function. Defaults to (lambda (n) n)")
 
-            Default (lambda ())")
