@@ -1,11 +1,8 @@
 ;;;; CYCO generators/ramp.lisp
 ;;;;
-;;;;
 ;;;; Generator for arithmetic sequence.  Ramps are similar to
 ;;;; counters except they may have non-integer values.
-;;;; The other major difference is that the action function
-;;;; for a counter may modify the sequence of values.  Self
-;;;; modification is more convoluted for ramps.
+
 
 (in-package :cyco)
 
@@ -28,16 +25,9 @@
 
 (defun ramp (a b &key (by 1)
 	       (hook #'(lambda (n) n))
-	       (monitor #'(lambda (v)
-			    (declare (ignore v))
-			    nil))
-	       (action #'(lambda (ramp)
-			   (declare (ignore ramp))))
 	       &allow-other-keys)
   (make-instance 'ramp
 		 :hook hook
-		 :monitor monitor
-		 :action action 
 		 :seed a
 		 :floor a
 		 :ceiling b
@@ -53,8 +43,6 @@
   (ramp (ramp-floor mother)
 	(ramp-ceiling mother)
 	:by (ramp-increment mother)
-	:monitor (monitor mother)
-	:action (action mother)
 	:hook (value-hook mother)))
 
 
@@ -72,10 +60,7 @@
   
   (defmethod next-1 ((ramp ramp))
     (prog1
-	(progn
-	  (if (funcall (monitor ramp)(internal-value ramp))
-	      (funcall (action ramp) ramp))
-	  (value ramp))
+	(value ramp)
       (let ((floor (ramp-floor ramp))
 	    (ceiling (ramp-ceiling ramp)))
 	(cond ((< floor ceiling)(increment ramp ceiling))
@@ -89,14 +74,11 @@
 (setf (documentation 'ramp 'function)
       "Creates new RAMP generator.
 
-(ramp a b &key by hook monitor action)
+(ramp a b &key by hook)
 
 a - Number, initial value
 b - Number, final value
 :by      - Increment, default -1 or +1
 :hook    - Function applied by the value method to the internal value.
-           Default (lambda (n) n)
-:monitor - Predicate called within next-1 to determine if action function 
-           should be executed.  Default (lambda (value) nil)
-:action  - Function called with next-1 whenever the monitor predicate
-           returns non-nil.  Default (lambda (ramp))")
+           Default (lambda (n) n)")
+
