@@ -226,43 +226,3 @@
   (pass? "Alloy 11.28"
 	 (equal actual expected)))
 
-;; Monitor and action functions
-;;
-
-(let ((action-counter 0))
-  (flet ((increment ()
-		    (setf action-counter (1+ action-counter))))
-
-    (let ((counter (counter 0 9
-			:monitor #'(lambda (value)(= value 5))
-			:action #'(lambda (counter value)
-				    (declare (ignore counter))
-				    (increment)
-				    (1+ value)))))
-      (pass? "counter action function 11.29"
-	     (and (equal (next counter 9) '(0 1 2 3 4 6 7 8 9))
-		  (= action-counter 1))))
-
-    (let ((asr (asr-envelope 0 10
-			     :loop nil
-			     :monitor #'(lambda (env value)
-					  (declare (ignore env))
-					  (= value 5))
-			      :action #'(lambda (env value)
-					  (declare (ignore env))
-					  (increment)
-					  value))))
-      (next asr 30)
-      (pass? "asr-envelope action function 11.30"
-	     (= action-counter 3)))
-
-
-    (let* ((hs (hailstone 100
-			  :monitor #'(lambda (v)(or (= v 17)(= v 34)))
-			  :action #'(lambda (hs v)
-				      (declare (ignore hs))
-				      (increment)
-				      v))))
-      (next hs 30)
-      (pass? "hailstone action function 11.31"
-	     (= action-counter 5))) ))
